[gd_scene load_steps=2 format=3 uid="uid://b3drmsj7pkxmw"]

[ext_resource type="Script" uid="uid://dn2lhakljd5jk" path="res://scripts/game/level_up_screen.gd" id="1_rx24e"]

[node name="LevelUpScreen" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_rx24e")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.023529412, 0.023529412, 0.023529412, 0.39215687)

[node name="LevelUpMenu" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -20.0
offset_right = 109.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/LevelUpMenu"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option" type="Button" parent="ColorRect/LevelUpMenu"]
layout_mode = 2
text = "Upgrade 1"

[node name="Option2" type="Button" parent="ColorRect/LevelUpMenu"]
layout_mode = 2
text = "Upgrade 3"

[node name="Option3" type="Button" parent="ColorRect/LevelUpMenu"]
layout_mode = 2
text = "Upgrade 3"

[connection signal="pressed" from="ColorRect/LevelUpMenu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="ColorRect/LevelUpMenu/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="ColorRect/LevelUpMenu/Option3" to="." method="_on_option_3_pressed"]
